# Fastapi-Project-Generator

./: .gitignore  README.md  cookiecutter.json
docs/: installation.md
hooks/: post_gen_project.py
{{ cookiecutter.project_slug }}/: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  makefile  mkdocs.yml  pyproject.toml  tox.ini
{{ cookiecutter.project_slug }}/tests/: test_auth.py
